fix: say actual URL of new page on redirect

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -59,7 +59,7 @@
         After 2/19/26, this page will not exist. Please update your bookmarks to
         the new URL.
       </h3>
-      <a href="https://emr.driftwoodeval.com" class="button">Go to New URL</a>
+      <a href="https://emr.driftwoodeval.com" class="button">emr.driftwoodeval.com</a>
     </div>
   </body>
 </html>
